Can't import UTF-16 encoded .ics files
Evolution won't import certain .ics calendars, in this case a weekly timetable of my university. MS Outlook has no troubles importing it.
When executing Evolution with EWS_DEBUG=2 evolution >& logfile
the log only says:
(evolution:141907): evolution-shell-WARNING **: 20:55:36.076: Cannot import any of the given URIs when opening the attached file.
I had that problem with .ics-files from other sources as well, but can't really find a clear difference to .ics files that work.
Edited by Milan Crha