I#1428 - Can't import UTF-16 encoded .ics files

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1428